# spotify-recommender-engine

./: .env.example  .gitignore  README.md  docker-compose.yaml  nginx.conf
auth-backend/: .dockerignore  Dockerfile  pom.xml
backend/: .env.example  main.py  pyproject.toml
backend/artifacts/: vectorizer.pkl
backend/src/: main.py
backend/testing_commands/: test1.sh
frontend/: .dockerignore  .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/public/: popup-callback.html
frontend/src/: App.tsx  AuthProvider.tsx  KeycloakProvider.tsx  keycloak.ts  main.tsx
keycloak/: realm-export.json
recommend-backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
recommend-backend/artifacts/: vectorizer.pkl
recommend-backend/scripts/: check.sh  format.sh
recommend-backend/src/: main.py
recommend-backend/src/auth/: config.py  models.py  service.py
recommend-backend/src/recommend/: router.py
recommend-backend/src/recommend/clustering/: config.py  engine.py  models.py  recommend.py  service.py
recommend-backend/src/recommend/collaborative/: config.py  recommend.py
recommender_system_experiments/: 01.ipynb  fastapi_example.py
recommender_system_experiments/notebooks/: 02_collaborative_model.ipynb  03_collaborative_mongo.ipynb  04_clustering.ipynb  05_load_data_to_qdrant.ipynb  06_generate_predictions.ipynb  07_load_clustering_data_pgvector.ipynb  clustering_load_data_to_qdrant.py  fastapi_run_recommender.py  test_clustering_model.sh  test_collaborative_model.sh
(+72 files in other folders)
